--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -6,11 +6,10 @@
         <meta name="keywords" content="HTML, CSS, JS">
         <meta name="author" content="Marlette Dakiwas">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="../default.css">
         <title>About Me</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Mandali&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap&family=Yusei+Magic&display=swap&family=Baloo+Bhaijaan+2:wght@400..800&display=swap');
         </style>
     </head>
     <body id="aboutcss">
@@ -28,7 +27,7 @@
 
         <main>
             <p>
-                <span class="textstroke">Hello!</span> I am Marlette Jessa Dakiwas, a Filipino-American student attending the University of North Carolina at Chapel Hill.
+                <span class="textstroke-yellow">Hello!</span> I am Marlette Jessa Dakiwas, a Filipino-American student attending the University of North Carolina at Chapel Hill.
                 I am a senior studying Information Science and New Media Communication, with a minor in Chinese.
                 I am a Carolina Covenant, Road to Hire, and Project One scholar. 
             </p>
@@ -38,17 +37,28 @@
                 Gaming Assistant under UNC-CH's Gaming Arena.
                 I volunteer in the Carolina Covenant office as a Covenant Connector, ensuring to connect fellow Covenant
                 scholars to valued campus and program resources.</p>
-            <p id="finalp">Additionally, I am a Road to Hire Campus Student Ambassador tasked with assisting in the smooth transition into
+            <p id="p-grid">Additionally, I am a Road to Hire Campus Student Ambassador tasked with assisting in the smooth transition into
                 college of UNC-CH students under the Road to Hire Program. My roots as an immigrant, first-generation, and Title-1 student has impassioned me to advocate for student
-                equity and in helping students like myself in achieving their best selves in college.</p>
+                equity and in helping students like myself in achieving their best selves in college and beyond.</p>
+            <aside id="imgcontainer">
+                <img src="../Graphics/votefam.jpg" alt="Family after voting">
+                <img src="../Graphics/trailfrie.jpg" alt="Friends after a hike">
+                <img src="../Graphics/renfairefam.jpg" alt="Family in the Renaissance Faire">
+            </aside>
+            <p id="p2-grid">Outside of academics, I am a family and friends-oriented person and love to hangout with my family and friends! Some hobbies I enjoy are going to the gym, drawing, crocheting, and reading.
+                I'm every much a home-body annd enjoy the indoors, but I love to hike through nature trails and go to scenic landscapes.</p>
+            <img src="../graphics/beachfre.jpg" alt="Friends in the beach" id="img3">
+            <img src="../graphics/frie.jpg" alt="Friends rotting under the Sun on campus" id="img4">
         </main>
+
         <section id="contacts">
-            <h2>Connect with me!</h2>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/mdakiwas">LinkedIn</a></li>
-                <li><a href="https://unc.joinhandshake.com/profiles/31620094">Handshake</a></li>
-                <li><a href="https://mail.google.com/mail/u/?authuser=mjessdakiwas@gmail.com">Email</a></li>
-            </ul>
+            <h2>Interested in <span class="textstroke-yellow">connecting</span> with me?</h2>
+                <p>Click any button below to be redirected to a way to connect with me!</p>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/mdakiwas" class="button">LinkedIn</a></li>
+                    <li><a href="https://unc.joinhandshake.com/profiles/31620094" class="button">Handshake</a></li>
+                    <li><a href="https://mail.google.com/mail/u/?authuser=mjessdakiwas@gmail.com" class="button">Email</a></li>
+                </ul>
         </section>
     </body>
 </html>
