--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="keywords" content="HTML, CSS, JS">
     <meta name="author" content="Marlette Dakiwas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="default.css">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Mandali&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap&family=Yusei+Magic&display=swap&family=Baloo+Bhaijaan+2:wght@400..800&display=swap');
     </style>
     <title>Homepage</title>
   </head>
@@ -38,8 +37,10 @@
         <h1>Aspirations</h1>
         <p>I am looking into exploring Data Analysis and Visualization. I also envision to pursue Project Management in the future.</p>
         <p>I am currently looking for Spring 2025 internships to furthur my knowledge and apply my in-course experiences in the real world.</p>
-        <p>For more information about my college experiences, click the button below to view my résumé!</p>
-        <a href="Documents/resume.pdf" class="button">Resume</a>
+        <p>For more information about my experiences, click the button below to view my résumé!</p>
+        <div id="resumebutton">
+          <a href="Documents/resume.pdf" class="button">Resume</a>
+        </div>
       </section>
     </main>
   </body>
