--- a/pages/works.html
+++ b/pages/works.html
@@ -6,11 +6,10 @@
         <meta name="keywords" content="HTML, CSS, JS">
         <meta name="author" content="Marlette Dakiwas">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="../default.css">
         <title>About Me</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Mandali&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap&family=Yusei+Magic&display=swap&family=Baloo+Bhaijaan+2:wght@400..800&display=swap');
         </style>
     </head>
     <body>
@@ -27,8 +26,7 @@
         </header>
         
         <main id="workscss">
-            <h1><span class="textstroke">Graphics</span></h1>
-            <h3>Examples of my graphic design works...</h3>
+            <h1><span class="textstroke-yellow">Graphic Design</span></h1>
             <section id="graphics">
                 <img class="slides fade" src="../Graphics/Works/SEASA_Graphics/SeptDump_Graphic/1.jpg" alt="Page 1 of September Recap Graphic">
                 <img class="slides fade" src="../Graphics/Works/SEASA_Graphics/FYR_Graphic/1.jpg" alt="Page 1 of First-year Representatives Reveal Graphic">
@@ -39,8 +37,8 @@
                 <img class="slides fade" src="../Graphics/Works/COMM160_Performance/1.jpg" alt="Page 1 of Performance Pamplet">
                 <img class="slides fade" src="../Graphics/Works/MMA_Flyer.png" alt="Flyer of Mending Minds Access--a nonprofit organization proposal">
                 <img class="slides fade" src="../Graphics/Works/MotherNature.jpg" alt="Collage mirroring the concept of Mother Nature">
-                <button class="w3-button w3-black w3-display-left" onclick="plusSlides(-1)">❮</button>
-                <button class="w3-button w3-black w3-display-right" onclick="plusSlides(1)">❯</button>
+                <button id="slidesbutton-left" onclick="plusSlides(-1)">❮</button>
+                <button id="slidesbutton-right" onclick="plusSlides(1)">❯</button>
             </section>
             <aside id="indicators">
                 <img class="img-ind" src="../Graphics/Works/SEASA_Graphics/SeptDump_Graphic/1.jpg" alt="Page 1 of September Recap Graphic" onclick="currentSlide(1)">
@@ -54,54 +52,86 @@
                 <img class="img-ind" src="../Graphics/Works/MotherNature.jpg" alt="Collage mirroring the concept of Mother Nature" onclick="currentSlide(9)">
             </aside>
 
-            <h1><span class="textstroke">Projects</span></h1>
+            <h1><span class="textstroke-yellow">Projects</span></h1>
             <section id="projects">
-                <article>
+                <article class="card">
                     <img src="../Graphics/Projects/engl155_picex.png" alt="Image preview of ENGL155 project: 'Speak on my Behalf'">
                     <aside>
                         <h3>ENGL 155: Visual & Graphic Narrative</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="../Graphics/Projects/engl155_speakonmybehalf.pdf" class="button">View</a>
+                        <a href="../Graphics/Projects/engl155_speakonmybehalf.pdf" class="button center ">View</a>
                     </aside>
                 </article>
-                <article>
+                <article class="card">
                     <img src="../Graphics/Projects/chin545_picex.png" alt="Image preview of ENGL155 project: 'Speak on my Behalf'">
                     <aside>
                         <h3>CHIN 545: Chinese Science Fiction</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="../Graphics/Projects/chin545_balllightninganalysis.pdf" class="button">View</a>
+                        <a href="../Graphics/Projects/chin545_balllightninganalysis.pdf" class="button center">View</a>
                     </aside>
                 </article>
-                <article>
+                <article class="card">
                     <img src="../Graphics/Projects/comm638_picex.png" alt="Image preview of COMM638 game project">
                     <aside>
                         <h3>COMM 638: Game Design</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="https://drive.google.com/file/d/1Vom_bT_OMj0kyOB71PS4pvd1-JSoVYwP/view?usp=sharing" class="button">View</a>
+                        <a href="https://drive.google.com/file/d/1Vom_bT_OMj0kyOB71PS4pvd1-JSoVYwP/view?usp=sharing" class="button center">View</a>
                     </aside>
                 </article>
-                <article>
+                <article class="card">
                     <img src="../Graphics/Projects/inls384_digitaldivideposter.png" alt="Image preview of ENGL155 project: 'Speak on my Behalf'">
                     <aside>
                         <h3>INLS 384: Information and Computer Ethics</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="graphics/works/inls384_digitaldivideposter.png" class="button">View</a>
+                        <a href="graphics/works/inls384_digitaldivideposter.png" class="button center">View</a>
                     </aside>
                 </article>
-                <article>
+                <article class="card">
                     <img src="../Graphics/Projects/inls382_picex.png" alt="Image preview of ENGL155 project: 'Speak on my Behalf'">
                     <aside>
                         <h3>INLS 382: Information Systems Analysis and Design</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="https://drive.google.com/file/d/1sjQ-NjkvvwmHY0OcX_nOdVfZdO9LxGRn/view?usp=sharing" class="button">View</a>
+                        <a href="https://drive.google.com/file/d/1sjQ-NjkvvwmHY0OcX_nOdVfZdO9LxGRn/view?usp=sharing" class="button center">View</a>
                     </aside>
                 </article>
-                <article>
-                    <img src="../Graphics/Projects/comm490_picex.png" alt="Image preview of ENGL155 project: 'Speak on my Behalf'">
+                <article class="card">
+                    <img src="../Graphics/Projects/comm490_picex.png" alt="Image preview of COMM490 project using Adobe Animate">
                     <aside>
                         <h3>COMM 490: Introduction to Animation: 2D to 3D</h3>
                         <p>Want to view the entire project? Click the button below!</p>
-                        <a href="https://drive.google.com/file/d/1NA9btX_Nfal5TmPSj6wlMZu3pL3MDJEG/view?usp=sharing" class="button">View</a>
+                        <a href="https://drive.google.com/file/d/1NA9btX_Nfal5TmPSj6wlMZu3pL3MDJEG/view?usp=sharing" class="button center">View</a>
+                    </aside>
+                </article>
+            </section>
+
+            <h1><span class="textstroke-yellow">Web Development</span></h1>
+            <section id="websites">
+                <article class="card">
+                    <img src="../Graphics/Projects/comm636_picex.png" alt="Image preview of COMM636 project: Brand or Not to Brand?">
+                    <aside>
+                        <p>Want to view the entire project? Click the button below!</p>
+                        <a href="https://mdakiwas.github.io./Personal%20Website/index.html" class="button center">View</a>
+                    </aside>
+                </article>
+                <article class="card">
+                    <img src="../Graphics/Projects/comm636_picex4.png" alt="Image preview of COMM636 project: JavaScript Simple Task">
+                    <aside>
+                        <p>Want to view the entire project? Click the button below!</p>
+                        <a href="https://mdakiwas.github.io./JavaScript_Simple%20Task/index.html" class="button center">View</a>
+                    </aside>
+                </article>
+                <article class="card">
+                    <img src="../Graphics/Projects/comm636_picex2.png" alt="Image preview of COMM636 project: Laying Out Layouts">
+                    <aside>
+                        <p>Want to view the entire project? Click the button below!</p>
+                        <a href="https://mdakiwas.github.io./Laying%20Out%20Layouts/index.html" class="button center">View</a>
+                    </aside>
+                </article>
+                <article class="card">
+                    <img src="../Graphics/Projects/comm636_picex3.png" alt="Image preview of COMM636 project: Early Internet Art: Accessible Surfing">
+                    <aside>
+                        <p>Want to view the entire project? Click the button below!</p>
+                        <a href="https://mdakiwas.github.io./Early%20Internet%20Art_Accessible%20Surfing/index.html" class="button center">View</a>
                     </aside>
                 </article>
             </section>
