--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -26,18 +26,18 @@
           </header>
 
         <main>
-            <p>
+            <p id="p1">
                 <span class="textstroke-yellow">Hello!</span> I am Marlette Jessa Dakiwas, a Filipino-American student attending the University of North Carolina at Chapel Hill.
                 I am a senior studying Information Science and New Media Communication, with a minor in Chinese.
                 I am a Carolina Covenant, Road to Hire, and Project One scholar. 
             </p>
             <img src="../Graphics/r2hstuamb.jpeg" alt="Road to Hire Student Ambassador" id="img1">
             <img src="../Graphics/seasa.jpg" alt="SEASA Cultural Wear event" id="img2">
-            <p>Outside the classroom, I am a Design Executive of UNC-CH Southeast Asian Student Association and a two-year
+            <p id="p2">Outside the classroom, I am a Design Executive of UNC-CH Southeast Asian Student Association and a two-year
                 Gaming Assistant under UNC-CH's Gaming Arena.
                 I volunteer in the Carolina Covenant office as a Covenant Connector, ensuring to connect fellow Covenant
                 scholars to valued campus and program resources.</p>
-            <p id="p-grid">Additionally, I am a Road to Hire Campus Student Ambassador tasked with assisting in the smooth transition into
+            <p id="p3">Additionally, I am a Road to Hire Campus Student Ambassador tasked with assisting in the smooth transition into
                 college of UNC-CH students under the Road to Hire Program. My roots as an immigrant, first-generation, and Title-1 student has impassioned me to advocate for student
                 equity and in helping students like myself in achieving their best selves in college and beyond.</p>
             <aside id="imgcontainer">
@@ -45,8 +45,8 @@
                 <img src="../Graphics/trailfrie.jpg" alt="Friends after a hike">
                 <img src="../Graphics/renfairefam.jpg" alt="Family in the Renaissance Faire">
             </aside>
-            <p id="p2-grid">Outside of academics, I am a family and friends-oriented person and love to hangout with my family and friends! Some hobbies I enjoy are going to the gym, drawing, crocheting, and reading.
-                I'm every much a home-body annd enjoy the indoors, but I love to hike through nature trails and go to scenic landscapes.</p>
+            <p id="p4">Outside of academics, I am a family and friends-oriented person and love to hangout with my family and friends! Some hobbies I enjoy are going to the gym, drawing, crocheting, and reading.
+                I'm every much a home-body and enjoy the indoors, but I love to hike through nature trails and go to scenic landscapes.</p>
             <img src="../graphics/beachfre.jpg" alt="Friends in the beach" id="img3">
             <img src="../graphics/frie.jpg" alt="Friends rotting under the Sun on campus" id="img4">
         </main>
