--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="Pages/aboutme.html">About Me</a></li>
-          <li><a href="Pages/works.html">Portfolio</a></li>
+          <li><a href="pages/aboutme.html">About Me</a></li>
+          <li><a href="pages/works.html">Portfolio</a></li>
           <li><a href="https://www.linkedin.com/in/mdakiwas">LinkedIn</a></li>
         </ul>
       </nav>
