--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -47,8 +47,8 @@
             </aside>
             <p id="p4">Outside of academics, I am a family and friends-oriented person and love to hangout with my family and friends! Some hobbies I enjoy are going to the gym, drawing, crocheting, and reading.
                 I'm every much a home-body and enjoy the indoors, but I love to hike through nature trails and go to scenic landscapes.</p>
-            <img src="../graphics/beachfre.jpg" alt="Me and my friends in Myrtle Beach" id="img3">
-            <img src="../graphics/frie.jpg" alt="Me and my friends on UNC's grassy quad on a sunny day" id="img4">
+            <img src="../Graphics/beachfre.jpg" alt="Me and my friends in Myrtle Beach" id="img3">
+            <img src="../Graphics/frie.jpg" alt="Me and my friends on UNC's grassy quad on a sunny day" id="img4">
         </main>
 
         <section id="contacts">
